Changes to stylesheet.css, resume, geo-lecnotes
Added css formatting for tables in stylesheet.css;
Added notes from Geography 1 class;
Updated resume.html with updated information;

--- a/geog-lecnotes.html
+++ b/geog-lecnotes.html
@@ -10,6 +10,7 @@
             <p id="name"><a href="#top">Geography 1</a></p>
             <a href="mailto:marveen1520@gmail.com"><p id="email">marveen1520@gmail.com</p></a>
         </div>
+        <div id="container">
         <div class="left"></div>
         <div class="right">
             <h4>Time</h4>
@@ -84,6 +85,12 @@
                     <li>Polar regions consistently cooler</li>
                 </ul>
             </ul>
+            <p>Where is the sun is overhead at different times of the year</p>
+            <ul>
+                <li>On 3/21, 9/22 sun is directly over the equator</li>
+                <li>On 6/21, sun is directly over Tropic of Cancer</li>
+                <li>On 12/22, sun is directly over Tropic of Capricorn</li>
+            </ul>
             <h4>The Atmosphere</h4>
             <table>
                 <caption>Atmospheric Composition of Planets</caption>
@@ -124,6 +131,139 @@
                     <td>really cold</td>
                 </tr>
             </table>
+            <p>Composition of the atmosphere</p>
+            <ul>
+                <li>Two primary gas types</li>
+                <ul>
+                    <li>Permanent</li>
+                    <ul>
+                        <li>Oxygen and Nitrogen</li>
+                    </ul>
+                    <li>Variable</li>
+                    <ul>
+                        <li>Water Vapor</li>
+                        <li>Carbon Dioxide</li>
+                        <li>Ozone</li>
+                    </ul>
+                </ul>
+                <li>Permanent gases make up over 98% of total atmosphere</li>
+            </ul>
+            <table id="manytitle">
+                <tr>
+                    <th></th>
+                    <th>Percent of Volume<br/>Dry Air</th>
+                    <th>Concentration in Parts<br/>per Million Parts of Air</th>
+                </tr>
+                <tr>
+                    <th class="secondarytitle">Permanent Gases</th>
+                </tr>
+                <tr>
+                    <td>Nitrogen (N2)</td>
+                    <td>78.084</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Oxygen</td>
+                    <td>20.946</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Argon</td>
+                    <td>0.934</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Neon</td>
+                    <td>0.00182</td>
+                    <td>18.2</td>
+                </tr>
+                <tr>
+                    <td>Helium</td>
+                    <td>0.00052</td>
+                    <td>5.2</td>
+                </tr>
+                <tr>
+                    <td>Krypton</td>
+                    <td>0.00011</td>
+                    <td>1.1</td>
+                </tr>
+                <tr>
+                    <td>Hydrogen</td>
+                    <td>0.00005</td>
+                    <td>0.5</td>
+                </tr>
+                <tr>
+                    <th class="secondarytitle">Variable gases</th>
+                </tr>
+                <tr>
+                    <td>Water vapor</td>
+                    <td>0 - 4</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Carbon dioxide</td>
+                    <td>0.039</td>
+                    <td>390</td>
+                </tr>
+                <tr>
+                    <td>Carbon Monoxide</td>
+                    <td></td>
+                    <td><100</td>
+                </tr>
+                <tr>
+                    <td>Methane</td>
+                    <td>0.000178</td>
+                    <td>1.78</td>
+                </tr>
+                <tr>
+                    <td>Ozone</td>
+                    <td></td>
+                    <td><2</td>
+                </tr>
+                <tr>
+                    <td>Sulfur dioxide</td>
+                    <td></td>
+                    <td><1</td>
+                </tr>
+                <tr>
+                    <td>Nitrogen dioxide</td>
+                    <td></td>
+                    <td><0.02</td>
+                </tr>
+            </table>
+            <ul>
+                <li>Carbon dioxide coagulates to form carbonate rocks such as limestone</li>
+                <li>Ozone is good in the layer it's in.</li>
+                <li>But it's not good down here. It will compromise your body because the body will try to absorb ozone over regular diatomic oxygen</li>
+            </ul>
+            <h5>Particulates (dust)</h5>
+            <ul>
+                <li>Non-gaseous particles which exist in the atmosphere</li>
+                <li>Many human-induced and natural types</li>
+                <li>Many are hygroscopic</li>
+                <li>Some reflect or absorb sunlight</li>
+            </ul>
+            <h5>Greenhouse Gases</h5>
+            <ul>
+                <li>Gases transparent to longwave radiation, opaque to shortwave radiation</li>
+                <ul>
+                    <li>CO2 (386 ppm)</li>
+                    <li>H20</li>
+                    <li>CH4 (1,774 ppb)</li>
+                    <li>N20 (319 ppb)</li>
+                    <li>CFC's</li>
+                </ul>
+            </ul>
+            <h5>Verical Structure of the Atmosphere</h5>
+            <p>Thermal Layers</p>
+            <ul>
+                <li>Troposphere--lowest 10-15 km of atmosphere; most weather occurs here</li>
+                <li>Stratosphere--stagnant air</li>
+                <li>Mesosphere--middle of atmosphere</li>
+                <li>Thermosphere--"heat"</li>
+                <li>Exosphere--transitions into interplanetary space</li>
+            </ul>
+        </div>
         </div>
         <div id="footer">
 			<p>East Los Angeles College | Monterey Park, CA</p>
