--- a/resume.html
+++ b/resume.html
@@ -2,70 +2,94 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="css/stylesheet.css">
-		<link type="text/css" rel="stylesheet" href="css/normalize.css"
+		<link type="text/css" rel="stylesheet" href="css/normalize.css">
 		<title>Sample Resume | Marvin Alcantara</title>
 	</head>
 	<body>
 		<div id="header">
 	   		<p id="name"><a href="/">Marvin Alcantara</a></p>
-	   		<a href="mailto:marveen1520@gmail.com"><p id="email">marveen1520@gmail.com</p></a>
+	   		<a href="mailto:maralcan2@gmail.com"><p id="email">maralcan2@gmail.com</p></a>
 		</div>
+		<div id="container">
 		<div class="left"></div>
 		<div class="right">
 			<h4>Objective</h4>
 			<p>Take a position as a web designer.</p>
 			<h4>Experience</h4>
+            <div class="small-section">
             <p><strong>Web Designer, Administrative Assitant</strong> | Austral Housing Inspections | <em>Oakland, CA</em></p>
-            <p id="workdates">June 2004 - August 2014</p>
+            <p class="workdates">June 2004 - August 2014</p>
 			<ul>
 				<li>Designed and maintained business website</li>
 				<li>Prepared reports for legal cases regarding housing code infractions</li>
 				<li>Managed communications between law firms and the housing inspector</li>
 				<li>Managed payments to the housing inspector from law firms</li>
 			</ul>
+            </div>
+            <div class="small-section">
             <p><strong>Intern</strong> | WorkSource | <em>Hollywood, CA</em></p>
-            <p id="workdates">July 2011 - August 2011</p>
+            <p class="workdates">July 2011 - August 2011</p>
 			<ul>
 			    <li>Transcribed and translated career-building workshops for unemployed</li>
 			    <li>Translated courses on career development to middle to elder-aged minority populations</li>
 			    <li>Managed payroll for department, resolved disputes regarding payroll</li>
 			    <li>Managed physical database for all petitions for unemployment benefits</li>
 			</ul>
+            </div>
+            <div class="small-section">
             <p><strong>Tutor</strong> | AVID | <em>Berkeley, CA</em></p>
-            <p id="workdates">September 2011 - February 2012</p>
+            <p class="workdates">September 2011 - February 2012</p>
 			<ul>
 			    <li>Taught 7th and 8th grade underrepresented students core concepts in all subject areas</li>
 			    <li>Promoted academic success by facilitating discussion in an effort to promote thorough understanding of a subject area that a student had trouble understanding</li>
 			    <li>Developed leadership and interpersonal communication skills through experiences in group management, conflict resolution, and teamwork activites with kids, fellow tutors, and teachers</li>
 			</ul>
+            </div>
+            <div class="small-section">
             <p><strong>Head Houseman</strong> | Cleaning Colorado Company | <em>Vail, CO</em></p>
-            <p id="workdates">June 2010 - August 2010</p>
+            <p class="workdates">June 2010 - August 2010</p>
 			<ul>
 			    <li>Managed inventory for cleaning operations</li>
 			    <li>Maintained cleanliness in a 5-star hotel</li>
 			</ul>
+            </div>
+            <div class="small-section">
             <p><strong>Cashier, Bakery Assistant</strong> | Sheng Kee of California | <em>Berkeley, CA</em></p>
-            <p id="workdates">July 2013 - August 2014</p>
+            <p class="workdates">July 2013 - August 2014</p>
 			<ul>
 			    <li>Maintained constant supply of bread and drinks</li>
 			    <li>Maintained cleanliness in a food environment up to par with food safety regulations</li>
 			    <li>Provided information regarding all products to customers</li>
 			</ul>
+			</div>
 			<h4>Education</h4>
+            <div class="small-section">
             <p><strong>Cognitive Science, BA</strong> | UC Berkeley, 2017</p>
 			<ul>
 				<li id="edu">Emphasis in Human-Computer Interface and East-Asian Linguistics</li>
 			</ul>
+			</div>
 			<h4>Skills</h4>
-			<ul>
-			    <li>Teaching</li>
-			    <li>PowerPoint</li>
-			    <li>MS Word</li>
-			    <li>Photoshop</li>
-			    <li>Illustrator</li>
-			    <li>Windows XP, 7, 8, 8.1</li>
-			    <li>Excel</li>
-			</ul>
+			<table id="skillz">
+			    <tr>
+			        <td>Teaching</td>
+			        <td>Photoshop</td>
+			        <td>Excel</td>
+			        <td>HTML</td>
+			    </tr>
+			    <tr>
+			        <td>PowerPoint</td>
+			        <td>Illustrator</td>
+			        <td></td>
+			        <td>CSS</td>
+			    </tr>
+			    <tr>
+			        <td>MS Word</td>
+			        <td>Windows XP, 7, 8, 8.1</td>
+			        <td>Python 2.7, 3.3</td>
+			        <td>SASS</td>
+			    </tr>
+			</table>
 			<p>Programming Languages:</p>
             <ul>
                 <li>JavaScript</li>
@@ -78,9 +102,10 @@
 			<ul>
 				<li>English</li>
 				<li>Español</li>
-				<li id='asian'>中文</li>
-				<li id='asian'>日本語</li>
+				<li class='asian'>中文</li>
+				<li class='asian'>日本語</li>
 			</ul>
+		</div>
 		</div>
 		<div id="footer">
 			<p>218 Bloom Street, Los Angeles, CA 90012-1974 | Tel: (323) 388-5789</p>
