Added new experimental layout
Changes to stylesheet.css, geog / meteor lec notes;
Added flexbox-grid-layout-w-mobile-menu;

--- a/meteor-lecnotes.html
+++ b/meteor-lecnotes.html
@@ -125,9 +125,235 @@
                 </ul>
             </ul>
             <h4>Temperature measurement in different atmospheric layers</h4>
-            <p>There are major differences in temperature readings from thermometer</p>
-            <p>Near the surface of the earth, we have air that collides with a thermometer. Lots of air molecules collide</p>
-            <p>However, in high layers of the atmosphere, there are simply too few air molecules to collide with a thermometer. High readings on thermometers correspond to heating by radiation from the sun. Molecules in this region are actually moving quite fast, but there are too few of them, so it <em>feels</em> cold.</p>
+            <p>There are major differences in temperature readings from thermometer.<br/>Near the surface of the earth, we have air that collides with a thermometer. Lots of air molecules collide.<br>However, in high layers of the atmosphere, there are simply too few air molecules to collide with a thermometer. High readings on thermometers correspond to heating by radiation from the sun. Molecules in this region are actually moving quite fast, but there are too few of them, so it <em>feels</em> cold.</p>
+            <h4>Test Review</h4>
+            <ol>
+                <li>Primary source of energy for earth's atmosphere</li>
+                <ul>
+                    <li>Sun emits different kinds of solar energy</li>
+                    <li>Electromagnetic Spectrum</li>
+                    <li>Shortwave ultraviolet radiation</li>
+                    <li>Visible light spectrum</li>
+                    <li>Longwave radiation</li>
+                </ul>
+                <li>Water Vapor</li>
+                <ul>
+                    <li>Carbon Dioxide</li>
+                    <li>Different states of matter</li>
+                </ul>
+                <li>Greenhouse gas and deforestation</li>
+                <ul>
+                    <li>Deforestation can cause increases in Carbon Dioxide</li>
+                </ul>
+                <li>Composition of earth's first atmosphere</li>
+                <ul>
+                    <li>Hydrogen and Helium</li>
+                </ul>
+                <li>Air mass density</li>
+                <ul>
+                    <li>The number of molecules present in a parcel of air</li>
+                </ul>
+                <li>Correct order of thermal spheres</li>
+                <ol>
+                    <li>Troposphere</li>
+                    <li>Stratosphere</li>
+                    <li>Mesosphere</li>
+                    <li>Thermosphere</li>
+                    <li>Exosphere</li>
+                </ol>
+                <li>Temperature and heat differences</li>
+                <ul>
+                    <li>In the troposphere, temperature decreases with elevation</li>
+                    <li>In the stratosphere, temperature continues to decrease</li>
+                </ul>
+                <li>Weather elements</li>
+                <li>Ozone</li>
+                <ul>
+                    <li>Found in the stratosphere</li>
+                    <li>Filters out UV rays from the sun</li>
+                </ul>
+                <li>Consequence of ozone depletion</li>
+                <ul>
+                    <li>Bad for skin -> increase in skin cancer frequency</li>
+                    <li>Cataracts would be common, if not present in everyone's eyes</li>
+                </ul>
+                <li>What is an Anion?</li>
+                <ul>
+                    <li>More protons than electrons: Cation</li>
+                    <li>More electrons than protons: Anion</li>
+                </ul>
+                <li>Lapse rates</li>
+                <ul>
+                    <li>Normal, Wet, Dry Adiabatic rates</li>
+                    <li>look in notes</li>
+                </ul>
+                <li>Temperature inversions</li>
+                <ul>
+                    <li>Los Angeles has radiation inversion occurring regularly</li>
+                    <li>As long as the sun is up, the atmosphere can be heated by radiation and conduction along the surface of the Earth</li>
+                    <li>When the sun goes down, the earth becomes a cooler for the air, the air cools by conduction but you still have warmer air higher up in the atmosphere</li>
+                </ul>
+                <li>Troposphere</li>
+                <li>Most abundant gas in stratosphere</li>
+                <ul>
+                    <li>Ozone, O3</li>
+                    <li>It's sometimes called the "ozonosphere"</li>
+                </ul>
+                <li>Latent heat - condensation</li>
+                <ul>
+                    <li>Whenever there is a change of state for water vapor, some energy is released.</li>
+                    <li>This "latent" heat is released into the atmosphere</li>
+                </ul>
+                <li>Radiation</li>
+                <ul>
+                    <li>A form of transferring heat from one substance to another</li>
+                </ul>
+                <li>Conduction - a form of heat transfer</li>
+                <ul>
+                    <li>Form of heating by contact</li>
+                </ul>
+                <li>Advection - horizontal heat transfer</li>
+                <ul>
+                    <li>Usually made possible by winds coming from warmer areas or coming down the side of a mountain</li>
+                </ul>
+                <li>Temperature of rising air</li>
+                <ul>
+                    <li>Air expands as it rises, thus decreasing its temperature</li>
+                </ul>
+                <li>How do red and blue light differ?</li>
+                <ul>
+                    <li>Visible light spectrum</li>
+                    <li>Violet, 0.4 micrometers</li>
+                    <li>Red, 0.7 micrometers</li>
+                </ul>
+                <li>Types of solar energy that reaches earth</li>
+                <ul>
+                    <li>UV</li>
+                    <li>Visible</li>
+                    <li>Infrared</li>
+                </ul>
+                <li>Why is the sky blue?</li>
+                <ul>
+                    <li>This is due to light scattering as it begins to hit air molecules</li>
+                    <li>Less scattering allows for the blue appearance</li>
+                    <li>Lots of scattering allows for red sunsets</li>
+                </ul>
+                <li>Rate at which radiant energy is emitted from a body</li>
+                <ul>
+                    <li>Increases with increasing temperature</li>
+                    <li>The energy release rate depends on the current temperature of that body</li>
+                </ul>
+                <li>What type energy does the sun emit</li>
+                <ul>
+                    <li>Short wave</li>
+                    <li>Long wave</li>
+                    <li>Visible light, <strong>greatest intensity</strong></li>
+                </ul>
+                <li>Earth emits what kind of energy</li>
+                <ul>
+                    <li>Infrared, <strong>greatest intensity</strong></li>
+                </ul>
+                <li>Combined earth - Atmosphere Albedo</li>
+                <ul>
+                    <li>Albedo - refers to how much solar energy is not being absorbed, rather it is being scattered or reflected</li>
+                    <li>For earth, 30%</li>
+                </ul>
+                <li>Ways of heating the atmosphere</li>
+                <ul>
+                    <li>Conduction, contact</li>
+                    <li>Radiation, deeper</li>
+                    <li>Convection, even deeper</li>
+                </ul>
+                <li>Sun disappears from view at north pole - when?</li>
+                <ul>
+                    <li>Winter solstice, December 23rd</li>
+                </ul>
+                <li>What happens during an equinox?</li>
+                <ul>
+                    <li>Equal day equal night</li>
+                    <li>sun is directly overhead</li>
+                    <li>Sunlight reaches both north and south pole equally</li>
+                </ul>
+                <li>Equal days and nights - where on earth?</li>
+                <ul>
+                    <li>@ the Equator</li>
+                </ul>
+                <li>Solar panels on homes</li>
+                <ul>
+                    <li>panels should be installed on the Southern side (for N hemisphere)</li>
+                </ul>
+                <li>Terrestrial radiation - characteristics</li>
+                <ul>
+                    <li>Longwave radiation</li>
+                    <li>Infrared</li>
+                </ul>
+                <li>When are crepuscular sunrays produced</li>
+                <ul>
+                    <li>When haze scatters light</li>
+                    <img src="http://static.tumblr.com/8a38f6bb94cf2d839a557f6bc8872f95/hzmt1ks/Um2n1p5x4/tumblr_static_angels-stairs.jpg" width="448.4" height="300">
+                </ul>
+                <li>Absorption and atmospheric gases</li>
+                <li>Dry adiabaic lapse rate</li>
+                <ul>
+                    <li>Rate of cooling, 5.5 degs per 1000 ft</li>
+                    <li>No condensation takes place</li>
+                </ul>
+                <li>Heterosphere, Homosphere</li>
+                <li>Auroras</li>
+                <ul>
+                    <li>northern, borealis</li>
+                    <li>ionosphere</li>
+                </ul>
+                <li>Diurnal chantes, causes</li>
+                <li>Suns surface, photosphere</li>
+                <ul>
+                    <li>photosphere - surface of the sun</li>
+                </ul>
+                <li>What happens during an equinox</li>
+                <ul>
+                    <li>equal hours of day and night</li>
+                    <li>12 hours each</li>
+                </ul>
+                <li>Which gas absorbs more earth radiation</li>
+                <ul>
+                    <li>Water vapor</li>
+                    <li>It's a green house gas</li>
+                </ul>
+                <li>How much solar energy is absorbed by earth</li>
+                <ul>
+                    <li>51% by earth</li>
+                    <li>19% by atmosphere</li>
+                    <li>30% is scattered</li>
+                </ul>
+                <li>Greenhouse gases</li>
+                <ul>
+                    <li>Water vapor</li>
+                    <li>Carbon Dioxide</li>
+                </ul>
+                <li>Indian summer</li>
+                <ul>
+                    <li>Warm fall and winter days</li>
+                    <li>On eastern seaboard, can occur in October</li>
+                </ul>
+                <li>Latitude-yearly balance of radiation</li>
+                <ul>
+                    <li>37 degrees</li>
+                    <li>+ net balance if at equator</li>
+                    <li>- net balance if at poles</li>
+                </ul>
+                <li>Reflection, scattering radiation</li>
+                <ul>
+                    <li>self-explanatory</li>
+                </ul>
+                <li>Earth's temperature if no green house effect</li>
+                <ul>
+                    <li>It would be significantly colder</li>
+                </ul>
+                <li>Latent heat</li>
+                <ul>
+                    <li>"hidden" heat, locked up in the bonds between molecules and / or the speed of a molecule</li>
+                </ul>
+            </ol>
         </div>
         <div id="footer">
 			<p>East Los Angeles College | Monterey Park, CA</p>
