--- a/geog-lecnotes.html
+++ b/geog-lecnotes.html
@@ -262,6 +262,117 @@
                 <li>Mesosphere--middle of atmosphere</li>
                 <li>Thermosphere--"heat"</li>
                 <li>Exosphere--transitions into interplanetary space</li>
+                <li>Homosphere - lowest 80km</li>
+                <li>Heterosphere - above homosphere</li>
+                <li>Ozone layer = between 15 and 48km; ozonosphere</li>
+                <li>ionosphere - between 60 and 400km; source of auroras</li>
+            </ul>
+            <h5>Human-Induced Atmospheric Change</h5>
+            <p>Ozone:</p>
+            <ul>
+                <li>O<sub>2</sub> molecule is intercepted by UV and cosmic radiation</li>
+                <li>Sufficient energy will break the bond between the atoms</li>
+                <li>One oxygen atom will latch on to a diatomic oxygen molecule, thereby creating O<sub>3</sub></li>
+                <li>This ozone will last about 3 - 4 days, when it will have reacted with some other chemical or has been broken down by receiving UV radiation</li>
+            </ul>
+            <h5>Depletion of the Ozone Layer</h5>
+            <p>How it happens:</p>
+            <ul>
+                <li>The "Hole" in the Ozone layer</li>
+                <li>Mainly affects polar regions</li>
+                <li>The Montreal Protocol</li>
+            </ul>
+            <p>Ramifications:</p>
+            <ul>
+                <li>Skin Cancer</li>
+                <li>Advanced in technology and smog have made this an equal opportunity cancer</li>
+                <li>Melanoma</li>
+            </ul>
+            <p>Chlorofluorocarbon (CFC)</p>
+            <ul>
+                <li>UV hits a CFC molecule, breaking off a chlorine atom</li>
+                <li>The chloring atom reacts with an ozone molecule, pulling an oxygen atom off it</li>
+                <li>The chlorine atom and the oxygen atom join to form a chloring monoxide molecule</li>
+                <li>A free oxygen atom pulls the oxygen atom off the chlorine monoxide molecule</li>
+                <li>Once free, the chlorine atom is off to reach with another ozone molecule</li>
+            </ul>
+            <p>Under the Clean Air Act, we watch out for:</p>
+            <ul>
+                <li>Primary Pollutants</li>
+                <ul>
+                    <li>Particulates</li>
+                    <li>Carbon monoxide (CO)</li>
+                    <li>Nitrogen compounds</li>
+                    <li>Sulfur compounds</li>
+                </ul>
+                <li>Secondary pollutants</li>
+                <ul>
+                    <li>Photochemical smog</li>
+                    <li>Ozone</li>
+                </ul>
+            </ul>
+            <h4>Energy and Temperature</h4>
+            <h5>The Impact of Temperature on the Landscape</h5>
+            <p>The sun affects everything</p>
+            <ul>
+                <li>All living things influenced by temperature</li>
+                <li>Adaptation to temperature extremes</li>
+                <li>Affects soil and bedrock exposure</li>
+                <li>We only borrow the sun's energy. If we kept any percentage of it, since we've been around for 4.5 billion years, we'd probably be shining as bright as the sun. :o</li>
+                <li>The warmth of our planet is a product of our sun's radiation</li>
+            </ul>
+            <p>What is Energy?</p>
+            <ul>
+                <li>Work, measuring the amount of exertion that it takes to perform a task</li>
+                <li>Kinetic energy is the energy of movement</li>
+            </ul>
+            <p>Basic Heating and Cooling</p>
+            <ul>
+                <li>Radiation</li>
+                <li>Warmer objects radiate more effectively</li>
+                <li>Warmer objects emit at shorter wavelengths</li>
+                <li>Radiative processes</li>
+                <li>Albedo</li>
+                <ul>
+                    <li>Objects repel electromagnetic waves</li>
+                    <li>Opposite of Absorption</li>
+                </ul>
+                <li>Other Heating types</li>
+                <ul>
+                    <li>Conduction</li>
+                    <ul>
+                        <li>Transfer of heat energy across a medium</li>
+                        <li>Results from a molecular collision</li>
+                    </ul>
+                    <li>Convection</li>
+                    <ul>
+                        <li>Heat transfer by vertical circulation</li>
+                        <li>Molecules move in tandem</li>
+                        <li>Convection cell</li>
+                    </ul>
+                    <li>Advection</li>
+                    <ul>
+                        <li>Horizontal transfer of heat in a moving fluid</li>
+                    </ul>
+                </ul>
+            </ul>
+            <p>Specific Heat and Latent Heat</p>
+            <ul>
+                <li>Specific Heat</li>
+                <li>The amount of energy required to raise the temperature of a substance by one degree</li>
+                <li>1 Calorie = (1 g H<sub>2</sub>O) / (1 deg C)</li>
+                <li>Latent Heat</li>
+                <li>The amount of energy required to change the state of matter of a substance</li>
+            </ul>
+            <h5>The Heating of the Atmosphere</h5>
+            <p>Insolation and Insulation</p>
+            <ul>
+                <li>Insulation - barrier to transfer of heat energy</li>
+                <li>InSolAtion - Incoming Solar Radiation</li>
+            </ul>
+            <p>Global energy budget</p>
+            <ul>
+                <li>quite complicated</li>
             </ul>
         </div>
         </div>
