Major Updates to web content
Updated links;
New notes and content;
Removed Startup Design Framework;

--- a/meteor-lecnotes.html
+++ b/meteor-lecnotes.html
@@ -354,6 +354,66 @@
                     <li>"hidden" heat, locked up in the bonds between molecules and / or the speed of a molecule</li>
                 </ul>
             </ol>
+            <p>Measuring Pressure</p>
+            <ul>
+                <li>Barometers</li>
+                <ul>
+                    <li>Mercurial</li>
+                    <ul>
+                        <li>Mercury, barometer with rising and falling mercury in a vertical tube</li>
+                    </ul>
+                    <li>Aneroid</li>
+                    <ul>
+                        <li>It has descriptive markings, millibars, that measure pressure</li>
+                        <li>Alitmeters, are barometers that record pressure and height</li>
+                    </ul>
+                </ul>
+            </ul>
+            <p>Mapping Air Pressure</p>
+            <ul>
+                <li>Isobars</li>
+                <li>Meteorologists look at lines of equal air pressure by taking in reports from many weather stations. Some stations might report 12 millibars, some others can report 10 millibars, and some can report 5 millibars. You just have to connect the dots and you get some circles that look like a geographic contour map that shows differences in elevation.</li>
+            </ul>
+            <p>Wind</p>
+            <ul>
+                <li>What causes the initial movement of air?</li>
+                <ul>
+                    <li>The pressure gradient. It's the difference between areas of high air pressure and low air pressure. If you're running into the wind, you're moving into a place of higher air pressure and if the wind is pushing you, you're moving into lower air pressure areas.</li>
+                    <li>The closer the isobars get, the faster the wind will blow.</li>
+                    <li>If the pressure gradient is very steep then the wind will move very fast</li>
+                    <li>Example: Hurricane</li>
+                    <ul>
+                        <li>The eye of the storm is an area of low pressure. So the air rises in the eye and it falls in the storm, where the air pressure is very high.</li>
+                    </ul>
+                </ul>
+                <li>What influences wind direction?</li>
+                <ul>
+                    <li>Coriolis Effect</li>
+                    <li>Some of the air that touches the surface of the earth is going to move as a result of friction.</li>
+                    <li>In the Northern hemisphere, wind will deflect to the right and the in the Southern hemisphere, the wind will deflect to the left.</li>
+                    <li>Wind Deflection Patterns</li>
+                    <ul>
+                        <li>In the Northern hemisphere, a high pressure air parcel will have air flowing out to the right (&#1421;, &#8635;). A low pressure air parcel will have air moving into it from the right. &#1421;, &#8634;</li>
+                        <li>Southern hemisphere, &#1422; H: &#8634;, L: &#8635;</li>
+                    </ul>
+                </ul>
+                <li>Wind Speed-Direction</li>
+                <li>Air Mass Convergence / Divergence</li>
+                <li>When you have converging wind closer to the surface of the earth, and diverging wind higher up, then you have rising air.</li>
+                <li>If you have converging wind at high altitudes and diverging wind near the surface of the air, you have sinking air.</li>
+                <li>Prevailing wind</li>
+                <li>It can help determine where to place things in a city. A prevailing wind can be a significant factor in determing placement of landfills, city centers, and even house planning / building. The direction of the wind will influence in which direction pollutants may fly, where city centers would have the least amount of wind, where a house should be better insulated so that it can receive better insulation during the winter and receive ventilation during the summer.</li>
+            </ul>
+            <p>Weather Instruments</p>
+            <ul>
+                <li>Weather Vane - direction</li>
+                <li>Wind sock - direction</li>
+                <li>Anemometer - speed (cups that spin)</li>
+                <li>Aerovane - speed and direction</li>
+                <li>Radiosonde - near the surface of the earth</li>
+                <li>Satellites</li>
+                <li>Doppler Radar emits microwaves and records the differences in disturbance</li>
+            </ul>
         </div>
         <div id="footer">
 			<p>East Los Angeles College | Monterey Park, CA</p>
