--- a/resume.html
+++ b/resume.html
@@ -102,8 +102,8 @@
 			<ul>
 				<li>English</li>
 				<li>Español</li>
-				<li class='asian'>中文</li>
-				<li class='asian'>日本語</li>
+                <li>Chinese (Mandarin, <span class="asian">&#20013;&#25991;</span>)</li>
+				<li class='asian'>Japanese (日本語)</li>
 			</ul>
 		</div>
 		</div>
