Path changes: More intuitive
Changes to fixnav.css (hopefully fixed);
Updated resume asian unicode html codes;
Changed header font for all notes subfiles;

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
 			    <tr>
 			        <td>PowerPoint</td>
 			        <td>Illustrator</td>
-			        <td></td>
+			        <td>Foreign Languages</td>
 			        <td>CSS</td>
 			    </tr>
 			    <tr>
@@ -103,7 +103,7 @@
 				<li>English</li>
 				<li>Español</li>
                 <li>Chinese (Mandarin, <span class="asian">&#20013;&#25991;</span>)</li>
-				<li class='asian'>Japanese (日本語)</li>
+				<li class='asian'>Japanese (&#26085;&#26412;&#35486;)</li>
 			</ul>
 		</div>
 		</div>
