--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,12 @@
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
                     <li><a href="/index.html">About</a></li>
-                    <li><a href="/lec-notes/index.html">Works</a></li>
+                    <li><a href="/notes/index.html">Works</a></li>
                     <ul>
-                        <li><a href="/lec-notes/meteor.html">Meteorology</a></li>
-                        <li><a href="/lec-notes/as-am.html">As - Am Studies</a></li>
-                        <li><a href="#geog">Geography</a></li>
+                        <li><a href="/notes/meteor.html">Meteorology</a></li>
+                        <li><a href="/notes/as-am.html">As - Am Studies</a></li>
+                        <li><a href="/notes/geo.html">Geography</a></li>
+                        <li><a href="notes/bible-study.html">Bible Studies</a></li>
                     </ul>
                     <li><a href="/works/index.html">Works</a></li>
                     <ul>
