--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Marvin Alcantara</title>
         
-        <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Rock+Salt' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         
         <meta name="viewport" content="width=device-width">
@@ -27,12 +27,13 @@
             <div class="container">
                 <ul>
                     <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="/index.html">About</a></li>
-                    <li><a href="/lec-notes/index.html">Works</a></li>
+                    <li><a href="#top">About</a></li>
+                    <li><a href="/notes/index.html">Works</a></li>
                     <ul>
-                        <li><a href="/lec-notes/meteor.html">Meteorology</a></li>
-                        <li><a href="/lec-notes/as-am.html">As - Am Studies</a></li>
-                        <li><a href="#geog">Geography</a></li>
+                        <li><a href="/notes/meteor.html">Meteorology</a></li>
+                        <li><a href="/notes/as-am.html">As - Am Studies</a></li>
+                        <li><a href="/notes/geo.html">Geography</a></li>
+                        <li><a href="/notes/bible-study.html">Bible Studies</a></li>
                     </ul>
                     <li><a href="/works/index.html">Works</a></li>
                     <ul>
@@ -78,7 +79,7 @@
 
 <footer class="footer">
     <div class="container">
-        <p>&copy 2015 Made with love by <a href="http://maralkan.github.io/">Marvin Alcantara</a></p>
+        <p>&copy 2015 Made with love by <a href="/">Marvin Alcantara</a></p>
     </div>
 </footer>
 
