--- a/works/fixnav.html
+++ b/works/fixnav.html
@@ -12,18 +12,17 @@
         <nav>
             <div class="container">
                 <ul>
-                    <li class="mobile-button"><a href="#">Menu</a></li>
-                    <li><a href="/index.html">About</a></li>
-                    <li><a href="/lec-notes/index.html">Works</a></li>
+                    <li><a href="/">About</a></li>
+                    <li><a href="/notes/index.html">Works</a></li>
                     <ul>
-                        <li><a href="/lec-notes/meteor.html">Meteorology</a></li>
-                        <li><a href="/lec-notes/as-am.html">As - Am Studies</a></li>
-                        <li><a href="#geog">Geography</a></li>
+                        <li><a href="/notes/meteor.html">Meteorology</a></li>
+                        <li><a href="/notes/as-am.html">As - Am Studies</a></li>
+                        <li><a href="/notes/geo.html">Geography</a></li>
                     </ul>
                     <li><a href="/works/index.html">Works</a></li>
                     <ul>
                         <li><a href="/works/artist-theme.html">Artist's Theme</a></li>
-                        <li><a href="/works/fixnav.html">Fixed Nav Bar</a></li>
+                        <li><a href="#top">Fixed Nav Bar</a></li>
                         <li><a href="/works/video-theme.html">Video Theme</a></li>
                     </ul>
                     <li><a href="/contact.html">Contact</a></li>
