Changes / Updates to sev files
Updated contact.html with method="post";
fixnav.css now has no extra styling;
bible-study notes added;
fixnav.html updated nav;

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <head>
         <title>Contact Me! Marvin Alcantara</title>
         
-        <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700|Righteous|Marck+Script' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         
         <meta name="viewport" content="width=device-width">
@@ -60,7 +60,7 @@
                             <p><input type="email" name="_replyto" placeholder="your@email.com"></p>
                             <p>Subject</p>
                             <p><input type="text" name="_subject" placeholder="Schedule Bible Study"></p>
-                            <input type="submit" value="Send">
+                            <input type="submit" value="Send" method="post">
                         </form>
                     </div>
                 </div>
