--- a/works/fixnav.html
+++ b/works/fixnav.html
@@ -13,11 +13,12 @@
             <div class="container">
                 <ul>
                     <li><a href="/">About</a></li>
-                    <li><a href="/notes/index.html">Works</a></li>
+                    <li><a href="/notes/index.html">Notes</a></li>
                     <ul>
                         <li><a href="/notes/meteor.html">Meteorology</a></li>
                         <li><a href="/notes/as-am.html">As - Am Studies</a></li>
                         <li><a href="/notes/geo.html">Geography</a></li>
+                        <li><a href="/notes/bible-study.html">Bible Studies</a></li>
                     </ul>
                     <li><a href="/works/index.html">Works</a></li>
                     <ul>
