Updates to content notes in as-am and meteor
method=post changed in contact form for contact.html;
Added new lecture notes for as-am.html;
Added new lecture notes for meteor.html;

--- a/contact.html
+++ b/contact.html
@@ -53,14 +53,14 @@
                 <div class="columns">
                     <div class="item">
                         <h4 class="item-title">Please fill out your name and email and include a reason for contact.</h4>
-                        <form action="//formspree.io/marveen1520@gmail.com">
+                        <form action="//formspree.io/marveen1520@gmail.com" method="post">
                             <p>Name</p>
                             <p><input type="text" name="name" placeholder="Maralkan"></p>
                             <p>Email</p>
                             <p><input type="email" name="_replyto" placeholder="your@email.com"></p>
                             <p>Subject</p>
                             <p><input type="text" name="_subject" placeholder="Schedule Bible Study"></p>
-                            <input type="submit" value="Send" method="post">
+                            <input type="submit" value="Send">
                         </form>
                     </div>
                 </div>
