--- a/notes/meteor.html
+++ b/notes/meteor.html
@@ -414,6 +414,45 @@
                 <li>Satellites</li>
                 <li>Doppler Radar emits microwaves and records the differences in disturbance</li>
             </ul>
+            <p>3/11/2015</p>
+            <h4>Scales of Atmospheric Motion</h4>
+            <ul>
+                <li>Microscale</li>
+                <li>Mesoscale - if we're talking about local winds</li>
+                <li>Synoptic</li>
+                <li>Global - if we're talking about the trade winds or the Westerlies</li>
+            </ul>
+            <p>Eddies - Whirls of Air - when wind encounters an obstacle, an eddy will form on the objects down-wind side.</p>
+            <p>Example - Mountains / speeds greater than 40 knots</p>
+            <ul>
+                <li>Wind moves on the windward side</li>
+                <li>As the air moves over the tip of the mountain, an eddy may form - "mountain eddy"</li>
+                <li>Air continues to flow in "mountain waves"</li>
+            </ul>
+            <p>Wind Shear - happens when air further away from the surface of the earth moves faster than air closer to the ground.</p>
+            <p>Side note: an aircraft always wants to take off against the wind to get more lift. I've observed that on the same flight that I always take the plane will take off of many different directions to take the same route.</p>
+            <h4>Local Wind and Pressure Systems</h4>
+            <p>Sea Breezes - onshore breezes</p>
+            <ul>
+                <li>High pressure over the sea and low pressure over the land.</li>
+            </ul>
+            <p>Land Breezes - offshore breezes</p>
+            <ul>
+                <li>High pressure over the land and low pressure over the sea.</li>
+            </ul>
+            <p>Mountain and Valley Breezes</p>
+            <ul>
+                <li>Day</li>
+                <li>Sun wamrs up higher elevation on a mountain and it creates a low air pressure. The valley has a higher pressure and air flows upward</li>
+                <li>Night - Higher elevations on a mountain cool off faster, high pressure. Valley is still warm, low pressure. Wind from higher elevations.</li>
+            </ul>
+            <p>Chinook</p>
+            <ul>
+                <li>Heating adiabatic winds</li>
+                <li>Compressional winds</li>
+                <li>Rocky Mts have hi pressure on the windward side and lo pressure on the leeway side/Great Plains.</li>
+                <li>"Snow-Eaters" - these winds can melt a foot of snow in less than a day.</li>
+            </ul>
         </div>
         <div id="footer">
 			<p>East Los Angeles College | Monterey Park, CA</p>
