New div for thoughts on Taoism in as-am.html
Added thoughts on Taoism will link from bible-study.html soon;

--- a/notes/as-am.html
+++ b/notes/as-am.html
@@ -147,6 +147,10 @@
                     <h4 class="item-title">Taoism</h4>
                     <p>Do not exalt the worthy,<br/>and the people will not compete.<br/>Do not value goods that are hard to come by,<br/>and the people will not steal.<br/>Do not display objects of desire,<br/>and the people's minds will not be distrubed.<br/>Therefore the ordering of the sage<br/>empties their minds,<br/>fills their bellies,<br/>weakends their ambitions,<br/>strengthens their bones.<br/>He always causes the people to be without knowledge,<br/>without desire,<br/>And causes the wise ones not to dare to act.<br/>He does nothing (<em>wuwei</em>), and there is nothing that is not brought to order.</p>
                     <quote>~excerpt from <em>Laozi</em></quote>
+                </div>
+                
+                <div class="item">
+                    <h4 class="item-title">Thoughts on Taoism</h4>
                     <p>Taoism is all about emptying the mind and ridding oneself of knowledge to achieve happiness. It is the knowledge of the things that you desire and the things that you want that make you unhappy.</p>
                     <p><em>Personally, I disagree with Taoism because I find it self-contradictory. You learn these things so that you can unlearn these things. You find happiness by ridding yourself of knowledge and teachers of this doctrine are hypocrites for teaching this doctrine because they must rid themselves of all knowledge so that they can be happy. I also think that unhappiness can stem from relationships because we may say something hurtful to someone and thereby cause pain to someone. I believe that unhapiness is much more than that. I also believe that hapiness is much more than just ridding yourself of materialism.</em></p>
                 </div>
